8302815 Use new Math.clamp method in core libraries