@@ -870,8 +870,8 @@ final class JrtPath implements Path {
     // between first and last, inclusive
     private static long lowMask(char first, char last) {
         long m = 0;
-        int f = Math.max(Math.min(first, 63), 0);
-        int l = Math.max(Math.min(last, 63), 0);
+        int f = Math.clamp(first, 0, 63);
+        int l = Math.clamp(last, 0, 63);
         for (int i = f; i <= l; i++)
             m |= 1L << i;
         return m;
@@ -881,8 +881,8 @@ final class JrtPath implements Path {
     // between first and last, inclusive
     private static long highMask(char first, char last) {
         long m = 0;
-        int f = Math.max(Math.min(first, 127), 64) - 64;
-        int l = Math.max(Math.min(last, 127), 64) - 64;
+        int f = Math.clamp(first, 64, 127) - 64;
+        int l = Math.clamp(last, 64, 127) - 64;
         for (int i = f; i <= l; i++)
             m |= 1L << i;
         return m;
